feat: change icons and names

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Blinktrade
+title: Research UAV
 classe: home
 ---
     <section class="section-features text-xs-center" id="journey">
@@ -181,8 +181,8 @@ classe: home
 
     <section class="section-signup bg-faded">
       <div class="container text-xs-center">
-        <h1 class="display-3">WE ARE HIRING</h1>
-        <p class="lead">Are you interested in changing the world?</p>
+        <h1 class="display-3">CONTACT US</h1>
+        <p class="lead">Are you interested in knowing more about the drone?</p>
 
         <form method="POST"  action="https://formspree.io/hr@blinktrade.com" autocomplete="off">
           <input type="hidden" name="_next" value="https://blinktrade.com" />
