--- a/index.html
+++ b/index.html
@@ -11,26 +11,16 @@ classe: home
           <div class="col-md-6 about-row-1">
             <div class="about-item about-item-right">
               <div class="col-md-10 col-xs-12">
-                <h4 class="about-title">BUILDING A NETWORK</h4>
-                <p class="about-text">We connected our network of Bitcoin exchanges with licensed consumer remittance companies.</p>
-              </div>
-              <div class="col-xs-2 about-item-icon">
-                <span class="display-1">
-                  <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24">
-                    <path d="M 3 0 C 1.3431458 0 0 1.3431458 0 3 C 0 4.6568542 1.3431458 6 3 6 C 3.6529955 6 4.2574803 5.7917384 4.75 5.4375 L 8.15625 8.84375 C 7.4429706 9.7080448 7 10.791877 7 12 C 7 13.208123 7.4429706 14.291955 8.15625 15.15625 L 4.75 18.5625 C 4.2574803 18.208262 3.6529955 18 3 18 C 1.3431458 18 0 19.343146 0 21 C 0 22.656854 1.3431458 24 3 24 C 4.6568542 24 6 22.656854 6 21 C 6 20.347005 5.7917384 19.74252 5.4375 19.25 L 8.84375 15.84375 C 9.7080448 16.557029 10.791877 17 12 17 C 12.842607 17 13.615999 16.774362 14.3125 16.40625 L 15.9375 18.8125 C 15.357601 19.359512 15 20.139898 15 21 C 15 22.656854 16.343146 24 18 24 C 19.656854 24 21 22.656854 21 21 C 21 19.343146 19.656854 18 18 18 C 17.561145 18 17.156957 18.111916 16.78125 18.28125 L 15.15625 15.84375 C 16.003259 15.144736 16.631416 14.173335 16.875 13.0625 L 18.03125 13.1875 C 18.132166 14.753039 19.408966 16 21 16 C 22.656854 16 24 14.656854 24 13 C 24 11.343146 22.656854 10 21 10 C 19.629644 10 18.483726 10.932332 18.125 12.1875 L 17 12.0625 C 17.00027 12.041074 17 12.02149 17 12 C 17 10.305233 16.133507 8.8105171 14.84375 7.90625 L 16.03125 5.8125 C 16.339888 5.9197841 16.654822 6 17 6 C 18.656854 6 20 4.6568542 20 3 C 20 1.3431458 18.656854 0 17 0 C 15.343146 0 14 1.3431458 14 3 C 14 3.9478181 14.438625 4.7939728 15.125 5.34375 L 13.96875 7.40625 C 13.363595 7.1461998 12.700431 7 12 7 C 10.791877 7 9.7080448 7.4429706 8.84375 8.15625 L 5.4375 4.75 C 5.7917384 4.2574803 6 3.6529955 6 3 C 6 1.3431458 4.6568542 0 3 0 z"></path>
-                  </svg>
-                </span>
+                <h4 class="about-title">BUILDING TAILORED UAVS</h4>
+                <p class="about-text">We customize the drone for your needs adapting it to the solution that you need.</p>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="about-item about-item-left">
-              <div class="col-xs-2 about-item-icon">
-                <span class="fa fa-users display-1"></span>
-              </div>
               <div class="col-md-10 col-xs-12">
-                <h4 class="about-title">BANKING THE UNBANKED</h4>
-                <p class="about-text">We are adding ATMs and mobile payments to our network to connect more users with our client companies.</p>
+                <h4 class="about-title">DESIGN AND MAINTENANCE</h4>
+                <p class="about-text">We provide assistance for building drones for multiple use cases and maintenance.</p>
               </div>
             </div>
           </div>
@@ -39,22 +29,16 @@ classe: home
           <div class="col-md-6 about-row-2">
             <div class="about-item about-item-right">
               <div class="col-md-10 col-xs-12">
-                <h4 class="about-title">POWERING BITCOIN EXCHANGES</h4>
-                <p class="about-text">We have brought New York Stock Exchange Building a network caliber technology to the Bitcoin world.</p>
-              </div>
-              <div class="col-xs-2 about-item-icon">
-                <span class="fa fa-link display-1"></span>
+                <h4 class="about-title">INSTITUTIONS AND BUSINESSES</h4>
+                <p class="about-text">We work hand-in-hand with public institutions and businesses to solve their specific problems.</p>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="about-item about-item-left">
-              <div class="col-xs-2 about-item-icon">
-                <span class="fa fa-paper-plane display-1"></span>
-              </div>
               <div class="col-md-10 col-xs-12">
-                <h4 class="about-title">A FASTER WAY TO TRANSACT</h4>
-                <p class="about-text">We have enabled instant business to business payments using the blockchain.</p>
+                <h4 class="about-title">TRUST EXPERTS WITH 5 YEARS OF EXPERIENCE</h4>
+                <p class="about-text">With multiple experts in the area of UAVs and researchers, you will be in great hands.</p>
               </div>
             </div>
           </div>
@@ -70,21 +54,20 @@ classe: home
           <div class="row">
             <div class="col-md-6 p-r-0">
               <figure class="has-light-mask m-b-0 image-effect">
-                <img src="{{ site.url }}{{ site.baseurl }}/assets/img/institutions.jpg" alt="Institutions" class="img-fluid">
+                <img src="{{ site.url }}{{ site.baseurl }}/assets/img/drone_top.jpeg" alt="Institutions" class="img-fluid">
               </figure>
             </div>
             <div class="col-md-6 p-l-0">
               <article class="center-block" style="padding-bottom: 0px;padding-top: 40px;">
                 <span class="label label-info">INSTITUTIONS</span>
                 <h5>
-                  <span>Institutions with a technology department</span>
-                  <a class="btn btn-secondary-outline m-b-1" href="mailto:institutions@blinktrade.com" style="margin-top:15px" role="button">institutions@blinktrade.com</a>
+                  <a class="btn btn-secondary-outline m-b-1" href="mailto:institutions@researchuav.com" style="margin-top:15px" role="button">institutions@researchuav.com</a>
                 </h5>
                 <p class="m-b-0">
                   <span style="margin: 0px;display: block;" class="label label-default text-uppercase">
-                    Integration into our network</span>
+                    Custom built UAVs</span>
                   <span style="margin: 0px;display: block;" class="label label-default text-uppercase">
-                    Fee on transactions between institutions</span>
+                    For research purposes</span>
                 </p>
               </article>
             </div>
@@ -92,29 +75,25 @@ classe: home
           <div class="row">
             <div class="col-md-6 col-md-push-6 p-l-0">
               <figure class="has-light-mask m-b-0 image-effect">
-                <img src="{{ site.url }}{{ site.baseurl }}/assets/img/startups.png" alt="Startups" class="img-fluid">
+                <img src="{{ site.url }}{{ site.baseurl }}/assets/img/control_station.jpeg" alt="Startups" class="img-fluid">
               </figure>
             </div>
             <div class="col-md-6 col-md-pull-6 p-r-0">
               <article class="center-block" style="padding-bottom: 0px;padding-top: 40px;">
-                <span class="label label-info">STARTUPS</span>
+                <span class="label label-info">BUSINESSES</span>
                 <br>
                 <h5>
-                  <span>Get your own Bitcoin Exchange</span>
-                  <a class="btn btn-secondary-outline m-b-1" href="http://form.jotform.us/form/41205503470139" target='_blank' style="margin-top:15px">
-                    Apply to be a partner
-                    <i class="fa fa-chevron-circle-right"></i>
-                  </a>
+                  <a class="btn btn-secondary-outline m-b-1" href="mailto:businesses@researchuav.com" style="margin-top:15px" role="button">businesses@researchuav.com</a>
                 </h5>
                 <p class="m-b-0">
                   <span style="margin: 0px;display:block" class="label label-default text-uppercase">
-                    Integration into our network
+                    Integration & Maintenance
                   </span>
                   <span style="margin: 0px;display:block" class="label label-default text-uppercase">
-                    Complete software solution and maintenance
+										On demand UAVs
                   </span>
                   <span style="margin: 0px;display:block" class="label label-default text-uppercase">
-                    No monthly fee, and we split the revenue in 50%-50%
+										Custom solutions for your business needs
                   </span>
                 </p>
               </article>
@@ -124,100 +103,21 @@ classe: home
       </div>
     </section>
 
-    <section class="section-intro text-xs-center" style="display:none">
-      <div class="container">
-        <h1 class="display-3">GET STARTED</h1>
-        <br>
-        <div class="row">
-          <div class="col-md-6 wp wp-2 wp-sequence-2">
-            <div class="card">
-              <div class="card-block">
-                <span class="fa fa-github display-1">
-                </span>
-                <h4 class="card-title">Open Source</h4>
-                <h6 class="card-subtitle text-muted">
-                  <a href="https://github.com/blinktrade/" target="_blank" class="card-link">
-                    Fork our code
-                    <i class="fa fa-chevron-circle-right"></i>
-                  </a>
-                </h6>
-                <p class="card-text">
-                  Download the code and you are on your own.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 wp wp-2 wp-sequence-2">
-            <div class="card m-b-0">
-              <div class="card-block">
-                <span class="fa fa-users display-1"></span>
-                <h4 class="card-title">Partner with us</h4>
-                <h6 class="card-subtitle text-muted">
-                  <a href="http://form.jotform.us/form/41205503470139" target="_blank" class="card-link">
-                    Apply to be a partner
-                    <i class="fa fa-chevron-circle-right"></i>
-                  </a>
-                </h6>
-                <p class="card-text">
-                  We'll take care of the IT and you take care of operations. No monthly fee, and we split the revenue in 50%-50%.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section-about text-xs-center" id="network">
-      <div class="container">
-        <h1 class="display-1"><strong>CREATE A GLOBAL NETWORK</strong></h1>
-        <p class="lead">
-          Create a network where individuals and businesses of any size can trade globally, instantly and
-          frictionless, without multiple intermediaries.
-        </p>
-        <img src="{{ site.url }}{{ site.baseurl }}/assets/img/globe.png" alt="iPad mock" class="img-fluid wp wp-3">
-      </div>
-    </section>
-
-    <section class="section-signup bg-faded">
+j   <section class="section-signup bg-faded">
       <div class="container text-xs-center">
         <h1 class="display-3">CONTACT US</h1>
         <p class="lead">Are you interested in knowing more about the drone?</p>
+        <p class="lead">Do you want to try the drone or build a custom soltuion with it?</p>
 
-        <form method="POST"  action="https://formspree.io/hr@blinktrade.com" autocomplete="off">
-          <input type="hidden" name="_next" value="https://blinktrade.com" />
-          <input type="hidden" name="_subject" value="BlinkTrade - Submission" />
-          <input type="hidden" name="_cc" value="rodrigo@blinktrade.com" />
-          <div class="row">
-            <div class="col-md-6 col-xl-3">
-              <div class="input-group" style="margin-bottom: 1.875rem;">
-                <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                <input type="text" class="form-control form-control-lg" id="inputName" placeholder="Your name" name="name">
-              </div>
-            </div>
-            <div class="col-md-6 col-xl-3">
-              <div class="input-group" style="margin-bottom: 1.875rem;">
-                <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-                <input type="email" class="form-control form-control-lg" id="inputEmail" placeholder="Email address" autocomplete="off" name="_replyto">
-              </div>
-            </div>
-            <div class="col-md-6 col-xl-3">
-              <div class="input-group" style="margin-bottom: 1.875rem;">
-                <span class="input-group-addon"><i class="fa fa-github"></i></span>
-                <input type="text" class="form-control form-control-lg" id="inputGithub" placeholder="Enter your Github" autocomplete="off" name="github">
-              </div>
-            </div>
-            <div class="col-md-6 col-xl-3">
-              <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-block">Join our team!</button>
-              </div>
-            </div>
-          </div>
+        <form method="POST"  action="https://formspree.io/f/mwppwbed" autocomplete="off">
+          <input type="hidden" name="_next" value="https://researchuav.com" />
+          <input type="hidden" name="_subject" value="Research UAV - Submission" />
+          <input type="hidden" name="_cc" value="contact@researchuav.com" />
+					<input type="text" class="form-control form-control-lg" id="inputName" placeholder="Your name" name="name">
+					<br>
+					<input type="email" class="form-control form-control-lg" id="inputEmail" placeholder="Email address" autocomplete="off" name="_replyto">
+					<br>
+					<button type="submit" class="btn btn-primary btn-block">Find out more!</button>
         </form>
       </div>
     </section>
-
-<!--PROF OF OWNERSHIP BITCOIN TALK FOR ilcolonnello
-Congratulations ; )
-You can request a proof that the site you mentioned is yours ?
--->
