fix: typo `reserachuav.com` to `researchuav.tech`

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ classe: home
               <article class="center-block" style="padding-bottom: 0px;padding-top: 40px;">
                 <span class="label label-info">INSTITUTIONS</span>
                 <h5>
-                  <a class="btn btn-secondary-outline m-b-1" href="mailto:institutions@researchuav.com" style="margin-top:15px" role="button">institutions@researchuav.com</a>
+                  <a class="btn btn-secondary-outline m-b-1" href="mailto:institutions@researchuav.tech" style="margin-top:15px" role="button">institutions@researchuav.tech</a>
                 </h5>
                 <p class="m-b-0">
                   <span style="margin: 0px;display: block;" class="label label-default text-uppercase">
@@ -83,7 +83,7 @@ classe: home
                 <span class="label label-info">BUSINESSES</span>
                 <br>
                 <h5>
-                  <a class="btn btn-secondary-outline m-b-1" href="mailto:businesses@researchuav.com" style="margin-top:15px" role="button">businesses@researchuav.com</a>
+                  <a class="btn btn-secondary-outline m-b-1" href="mailto:businesses@researchuav.tech" style="margin-top:15px" role="button">businesses@researchuav.tech</a>
                 </h5>
                 <p class="m-b-0">
                   <span style="margin: 0px;display:block" class="label label-default text-uppercase">
@@ -110,9 +110,9 @@ j   <section class="section-signup bg-faded">
         <p class="lead">Do you want to try the drone or build a custom soltuion with it?</p>
 
         <form method="POST"  action="https://formspree.io/f/mwppwbed" autocomplete="off">
-          <input type="hidden" name="_next" value="https://researchuav.com" />
+          <input type="hidden" name="_next" value="https://researchuav.tech" />
           <input type="hidden" name="_subject" value="Research UAV - Submission" />
-          <input type="hidden" name="_cc" value="contact@researchuav.com" />
+          <input type="hidden" name="_cc" value="contact@researchuav.tech" />
 					<input type="text" class="form-control form-control-lg" id="inputName" placeholder="Your name" name="name">
 					<br>
 					<input type="email" class="form-control form-control-lg" id="inputEmail" placeholder="Email address" autocomplete="off" name="_replyto">
